--- a/templates/layouts/index.layout.html
+++ b/templates/layouts/index.layout.html
@@ -9,6 +9,7 @@
 <body>
     {% include "partials/header.html" %}
 
+    {% include "partials/subscribe_modal.html" %}
 
 
     {% block content %}{% endblock %}
@@ -21,5 +22,7 @@
 
    
     {% block scripts %}{% endblock %}
+
+    <script src="main.js"></script>
 </body>
 </html>
