--- a/templates/layouts/without_header.layout.html
+++ b/templates/layouts/without_header.layout.html
@@ -9,6 +9,8 @@
 <body>
 
     {% block content %}{% endblock %}
+
+    {% include "partials/subscribe_modal.html" %}
     
 
     
@@ -18,5 +20,7 @@
 
    
     {% block scripts %}{% endblock %}
+
+    <script src="main.js"></script>
 </body>
 </html>
