--- a/templates/pages/favourites.html
+++ b/templates/pages/favourites.html
@@ -23,32 +23,29 @@
     <div class="main_text">10 товаров</div>
 
     <div class="sorting">
-        <a href="#" class="main_text uppercase">сортировка</a>
-        <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="sorting_arrow">
-                <path d="M5.83335 8.3335L10 12.5002L14.1667 8.3335" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+        <div class="sort_title">
+            <div class="main_text uppercase sorting_property">сортировка</div>
+            <div class="selected_sort"></div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="sorting_icon">
+                <path d="M4.16602 6.25H20.8327M10.416 12.5H20.8327M16.666 18.75H20.8327" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-        </a>
+        </div>
 
         <div class="sorting_dropdown">
-            <a href="#" class="sorting_item main_text">По дате добавления 
+            <div class="sorting_item main_text">По дате добавления 
                 <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 13 16" fill="none">
                 <path d="M10.3001 7.17707C10.2812 7.20032 10.2588 7.21876 10.2341 7.23134C10.2095 7.24392 10.1831 7.25039 10.1564 7.25039C10.1297 7.25039 10.1032 7.24392 10.0786 7.23134C10.0539 7.21876 10.0315 7.20032 10.0127 7.17707L6.70324 3.10395V13.5002C6.70324 13.5665 6.68184 13.6301 6.64374 13.677C6.60565 13.7239 6.55399 13.7502 6.50011 13.7502C6.44624 13.7502 6.39458 13.7239 6.35648 13.677C6.31839 13.6301 6.29699 13.5665 6.29699 13.5002V3.10395L2.98757 7.17707C2.9687 7.2003 2.9463 7.21872 2.92164 7.23129C2.89698 7.24387 2.87055 7.25034 2.84386 7.25034C2.81717 7.25034 2.79075 7.24387 2.76609 7.23129C2.74143 7.21872 2.71902 7.2003 2.70015 7.17707C2.68128 7.15384 2.66631 7.12627 2.6561 7.09592C2.64588 7.06557 2.64062 7.03305 2.64062 7.0002C2.64062 6.96735 2.64588 6.93482 2.6561 6.90447C2.66631 6.87412 2.68128 6.84655 2.70015 6.82332L6.3564 2.32332C6.37527 2.30008 6.39767 2.28164 6.42233 2.26906C6.44699 2.25648 6.47342 2.25 6.50011 2.25C6.52681 2.25 6.55324 2.25648 6.5779 2.26906C6.60256 2.28164 6.62496 2.30008 6.64382 2.32332L10.3001 6.82332C10.319 6.84654 10.3339 6.87411 10.3442 6.90446C10.3544 6.93481 10.3596 6.96734 10.3596 7.0002C10.3596 7.03305 10.3544 7.06558 10.3442 7.09593C10.3339 7.12628 10.319 7.15385 10.3001 7.17707Z" fill="#393939"/>
                 </svg>
-            </a>
-            <a href="#" class="sorting_item main_text">По дате добавления
+            </div>
+            <div class="sorting_item main_text">По дате добавления
                 <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 13 16" fill="none">
                 <path d="M2.69993 8.82293C2.71879 8.79968 2.74119 8.78124 2.76585 8.76866C2.79051 8.75608 2.81694 8.74961 2.84364 8.74961C2.87033 8.74961 2.89676 8.75608 2.92142 8.76866C2.94608 8.78124 2.96848 8.79968 2.98735 8.82293L6.29676 12.8961L6.29676 2.4998C6.29676 2.4335 6.31816 2.36991 6.35626 2.32303C6.39435 2.27614 6.44602 2.2498 6.49989 2.2498C6.55376 2.2498 6.60543 2.27614 6.64352 2.32303C6.68161 2.36991 6.70301 2.4335 6.70301 2.4998L6.70301 12.8961L10.0124 8.82293C10.0313 8.7997 10.0537 8.78128 10.0784 8.76871C10.103 8.75613 10.1294 8.74966 10.1561 8.74966C10.1828 8.74966 10.2093 8.75613 10.2339 8.76871C10.2586 8.78128 10.281 8.7997 10.2998 8.82293C10.3187 8.84616 10.3337 8.87373 10.3439 8.90408C10.3541 8.93443 10.3594 8.96695 10.3594 8.9998C10.3594 9.03265 10.3541 9.06518 10.3439 9.09553C10.3337 9.12588 10.3187 9.15345 10.2998 9.17668L6.6436 13.6767C6.62473 13.6999 6.60233 13.7184 6.57767 13.7309C6.55301 13.7435 6.52658 13.75 6.49989 13.75C6.47319 13.75 6.44676 13.7435 6.4221 13.7309C6.39744 13.7184 6.37504 13.6999 6.35618 13.6767L2.69993 9.17668C2.68104 9.15346 2.66606 9.12589 2.65584 9.09554C2.64561 9.06519 2.64035 9.03266 2.64035 8.9998C2.64035 8.96695 2.64561 8.93442 2.65584 8.90407C2.66606 8.87372 2.68104 8.84615 2.69993 8.82293Z" fill="#393939"/>
                 </svg>
-            </a>
-            <a href="#" class="sorting_item main_text">По убыванию цены</a>
-            <a href="#" class="sorting_item main_text">По возрастанию цены</a>
-            <a href="#" class="sorting_item main_text">Сначала в наличии</a>
+            </div>
+            <div class="sorting_item main_text">По убыванию цены</div>
+            <div class="sorting_item main_text">По возрастанию цены</div>
+            <div class="sorting_item main_text">Сначала в наличии</div>
         </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="sorting_icon">
-            <path d="M4.16602 6.25H20.8327M10.416 12.5H20.8327M16.666 18.75H20.8327" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
     </div>
 </div>
 
