--- a/templates/pages/refund.html
+++ b/templates/pages/refund.html
@@ -25,11 +25,15 @@
         <div class="refund_condition">
             <div class="refund_condition__visible">
                 <p class="main_text uppercase">возврат товаров надлежащего качества</p>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="refund_closed_arrow">
                     <path d="M5.83464 8.3335L10.0013 12.5002L14.168 8.3335" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </a>
+                </svg>
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="refund_opened_arrow">
+                    <path d="M14.1668 11.667L10.0002 7.50033L5.8335 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
             </div>
             <div class="refund_condition__hidden">
                 <p class="condition">
@@ -44,11 +48,15 @@
         <div class="refund_condition">
             <div class="refund_condition__visible">
                 <p class="main_text uppercase">возврат товаров ненадлежащего качества</p>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="refund_closed_arrow">
                     <path d="M5.83464 8.3335L10.0013 12.5002L14.168 8.3335" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </a>
+                </svg>
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="refund_opened_arrow">
+                    <path d="M14.1668 11.667L10.0002 7.50033L5.8335 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+
             </div>
             <div class="refund_condition__hidden">
                 <p class="condition">
