--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -20,16 +20,16 @@
       <div class="customer_info">
         <div class="personal_account">
             <a href="basket_full+entry_form.html" class="header_text_light">Войти</a>
-        <a href="personal_account_info.html">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                <path d="M9.99997 9.44453C10.7691 9.44453 11.521 9.21645 12.1605 8.78913C12.8 8.36182 13.2985 7.75445 13.5928 7.04385C13.8872 6.33325 13.9642 5.55132 13.8141 4.79695C13.6641 4.04258 13.2937 3.34965 12.7498 2.80578C12.206 2.26191 11.513 1.89153 10.7587 1.74147C10.0043 1.59142 9.22236 1.66843 8.51176 1.96277C7.80116 2.25711 7.1938 2.75556 6.76648 3.39509C6.33916 4.03461 6.11108 4.78649 6.11108 5.55564C6.11108 6.58704 6.52081 7.57619 7.25011 8.3055C7.97942 9.03481 8.96858 9.44453 9.99997 9.44453ZM9.99997 2.77786C10.5494 2.77786 11.0864 2.94077 11.5432 3.246C12 3.55123 12.3561 3.98506 12.5663 4.49263C12.7765 5.0002 12.8316 5.55872 12.7244 6.09756C12.6172 6.63639 12.3526 7.13135 11.9642 7.51982C11.5757 7.9083 11.0807 8.17286 10.5419 8.28004C10.0031 8.38722 9.44454 8.33221 8.93696 8.12197C8.42939 7.91173 7.99556 7.55569 7.69034 7.09889C7.38511 6.64209 7.2222 6.10503 7.2222 5.55564C7.2222 4.81893 7.51485 4.11239 8.03579 3.59145C8.55672 3.07052 9.26326 2.77786 9.99997 2.77786Z" fill="white"/>
-                <path d="M16.9278 13.5389C16.0369 12.5973 14.9633 11.8472 13.7726 11.3346C12.5819 10.822 11.2992 10.5576 10.0028 10.5576C8.70649 10.5576 7.42377 10.822 6.23309 11.3346C5.0424 11.8472 3.96877 12.5973 3.07783 13.5389C2.88467 13.7453 2.77739 14.0174 2.77783 14.3001V17.2223C2.77783 17.517 2.8949 17.7996 3.10327 18.008C3.31164 18.2163 3.59426 18.3334 3.88894 18.3334H16.1112C16.4059 18.3334 16.6885 18.2163 16.8968 18.008C17.1052 17.7996 17.2223 17.517 17.2223 17.2223V14.3001C17.2242 14.0182 17.119 13.7461 16.9278 13.5389ZM16.1112 17.2223H3.88894V14.2945C4.67629 13.4654 5.62411 12.8052 6.6747 12.3541C7.72529 11.903 8.8567 11.6703 10.0001 11.6703C11.1434 11.6703 12.2748 11.903 13.3254 12.3541C14.376 12.8052 15.3238 13.4654 16.1112 14.2945V17.2223Z" fill="white"/>
-            </svg>
-        </a>
+            <a href="personal_account_info.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M9.99997 9.44453C10.7691 9.44453 11.521 9.21645 12.1605 8.78913C12.8 8.36182 13.2985 7.75445 13.5928 7.04385C13.8872 6.33325 13.9642 5.55132 13.8141 4.79695C13.6641 4.04258 13.2937 3.34965 12.7498 2.80578C12.206 2.26191 11.513 1.89153 10.7587 1.74147C10.0043 1.59142 9.22236 1.66843 8.51176 1.96277C7.80116 2.25711 7.1938 2.75556 6.76648 3.39509C6.33916 4.03461 6.11108 4.78649 6.11108 5.55564C6.11108 6.58704 6.52081 7.57619 7.25011 8.3055C7.97942 9.03481 8.96858 9.44453 9.99997 9.44453ZM9.99997 2.77786C10.5494 2.77786 11.0864 2.94077 11.5432 3.246C12 3.55123 12.3561 3.98506 12.5663 4.49263C12.7765 5.0002 12.8316 5.55872 12.7244 6.09756C12.6172 6.63639 12.3526 7.13135 11.9642 7.51982C11.5757 7.9083 11.0807 8.17286 10.5419 8.28004C10.0031 8.38722 9.44454 8.33221 8.93696 8.12197C8.42939 7.91173 7.99556 7.55569 7.69034 7.09889C7.38511 6.64209 7.2222 6.10503 7.2222 5.55564C7.2222 4.81893 7.51485 4.11239 8.03579 3.59145C8.55672 3.07052 9.26326 2.77786 9.99997 2.77786Z" fill="white"/>
+                    <path d="M16.9278 13.5389C16.0369 12.5973 14.9633 11.8472 13.7726 11.3346C12.5819 10.822 11.2992 10.5576 10.0028 10.5576C8.70649 10.5576 7.42377 10.822 6.23309 11.3346C5.0424 11.8472 3.96877 12.5973 3.07783 13.5389C2.88467 13.7453 2.77739 14.0174 2.77783 14.3001V17.2223C2.77783 17.517 2.8949 17.7996 3.10327 18.008C3.31164 18.2163 3.59426 18.3334 3.88894 18.3334H16.1112C16.4059 18.3334 16.6885 18.2163 16.8968 18.008C17.1052 17.7996 17.2223 17.517 17.2223 17.2223V14.3001C17.2242 14.0182 17.119 13.7461 16.9278 13.5389ZM16.1112 17.2223H3.88894V14.2945C4.67629 13.4654 5.62411 12.8052 6.6747 12.3541C7.72529 11.903 8.8567 11.6703 10.0001 11.6703C11.1434 11.6703 12.2748 11.903 13.3254 12.3541C14.376 12.8052 15.3238 13.4654 16.1112 14.2945V17.2223Z" fill="white"/>
+                </svg>
+            </a>
         </div>
         <div class="location">
-            <a href="main+geolocation.html" class="header_text_light">Екатеринбург</a>
-            <a href="main+geolocation.html">
+            <a href="#" class="header_text_light">Екатеринбург</a>
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M10.0025 9.775C10.3736 9.775 10.6903 9.64306 10.9525 9.37917C11.2147 9.11528 11.3458 8.79778 11.3458 8.42667C11.3458 8.05556 11.2139 7.73889 10.95 7.47667C10.6856 7.21444 10.3681 7.08333 9.9975 7.08333C9.62695 7.08333 9.31028 7.21556 9.0475 7.48C8.78528 7.74389 8.65417 8.06139 8.65417 8.4325C8.65417 8.80361 8.78611 9.12028 9.05 9.3825C9.31445 9.64472 9.63195 9.77583 10.0025 9.77583V9.775ZM10 16.3983C11.5667 15.035 12.805 13.6486 13.715 12.2392C14.625 10.8292 15.08 9.60972 15.08 8.58083C15.08 7.05639 14.5975 5.79806 13.6325 4.80583C12.6675 3.81361 11.4567 3.3175 10 3.3175C8.54389 3.3175 7.33306 3.81333 6.3675 4.805C5.40195 5.79667 4.91945 7.055 4.92 8.58C4.92 9.60889 5.375 10.8283 6.285 12.2383C7.19556 13.6478 8.43389 15.0339 10 16.3967V16.3983ZM10 17.5167C8.04167 15.785 6.56667 14.17 5.575 12.6717C4.58278 11.1733 4.08667 9.80972 4.08667 8.58083C4.08667 6.81806 4.66056 5.36417 5.80834 4.21917C6.95667 3.07306 8.35389 2.5 10 2.5C11.6461 2.5 13.0433 3.07278 14.1917 4.21833C15.3394 5.36333 15.9133 6.81722 15.9133 8.58C15.9133 9.80889 15.4175 11.1725 14.4258 12.6708C13.4336 14.1692 11.9583 15.7842 10 17.5158V17.5167Z" fill="white"/>
                 </svg>
@@ -41,6 +41,23 @@
 
 <!-- Шапка серая конец -->
 
+<!-- Окно геолокации начало -->
+
+<div class="dark_window_location">
+    <div class="pop-up_form_500">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="close_icon">
+            <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
+        </svg>
+        <p class="main_text_contrast uppercase pop-up_title">введите название города</p>
+        <form method="GET" action="#" class="choose_city">
+            <input type="text" placeholder="Название города" class="input_city">
+            <a href="#" class="main_text">Ok</a>
+        </form>
+    </div>
+</div>
+
+<!-- Окно геолокации конец -->
+
 <!-- Шапка светлая начало -->
 
 <div class="header_light">
@@ -48,8 +65,8 @@
       <div class="nav_section_left">
           <a href="index.html" class="logo">Logo</a>
           <div class="nav_menu">
-                <a href="main+dropdown_women.html" class="main_text nav_menu__women">Женщины</a>
-                <a href="main+dropdown_men.html" class="main_text nav_menu__men">Мужчины</a>
+                <div class="main_text nav_menu__women">Женщины</div>
+                <div class="main_text nav_menu__men">Мужчины</div>
                 <a href="catalog_sales.html" class="main_text_addit_first">Sale</a>
           </div>
       </div>
@@ -88,6 +105,121 @@
 </div>
 
 <!-- Шапка светлая конец -->   
+
+<!-- Выпадающее меню Женщины начало -->
+
+<div id="dropdown_menu_women" class="dropdown_menu">
+    <div class="container container_menu">
+        <div class="dropdown_menu__row">
+            <div class="dropdown_menu__column">
+                <a href="catalog_opened_filters+checkbox+active.html" class="main_text_title">одежда</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Верхняя одежда</a>
+                    <a href="#" class="main_text">Трикотаж</a>
+                    <a href="#" class="main_text">Пиджаки</a>
+                    <a href="#" class="main_text">Платья и комбинезоны</a>
+                    <a href="#" class="main_text">Футболки и топы</a>
+                    <a href="#" class="main_text">Рубашки</a>
+                    <a href="#" class="main_text">Юбки</a>
+                    <a href="#" class="main_text">Брюки</a>
+                    <a href="#" class="main_text">Джинсы</a>
+                    <a href="#" class="main_text">Вся одежда</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">обувь</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Обувь на каблуке</a>
+                    <a href="#" class="main_text">Сникеры</a>
+                    <a href="#" class="main_text">Сапоги</a>
+                    <a href="#" class="main_text">Туфли без каблука</a>
+                    <a href="#" class="main_text">Сандалии и босоножки</a>
+                    <a href="#" class="main_text">Вся обувь</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">сумки</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Мини-сумки</a>
+                    <a href="#" class="main_text">Сумки на плечо</a>
+                    <a href="#" class="main_text">Сумки с короткими ручками</a>
+                    <a href="#" class="main_text">Рюкзаки</a>
+                    <a href="#" class="main_text">Шоперы</a>
+                    <a href="#" class="main_text">Все сумки</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">аксессуары</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Головные уборы</a>
+                    <a href="#" class="main_text">Шарфы</a>
+                    <a href="#" class="main_text">Ремни</a>
+                    <a href="#" class="main_text">Все аксессуары</a>
+                </div>
+            </div>
+        </div>
+        <div class="dropdown_menu__row">
+            <a href="total_looks.html" class="main_text_title">готовые образы</a>
+        </div>
+    </div>
+</div>
+
+<!-- Выпадающее меню Женщины конец -->
+
+<!-- Выпадающее меню Мужчины начало -->
+
+<div id="dropdown_menu_men" class="dropdown_menu">
+    <div class="container container_menu">
+        <div class="dropdown_menu__row">
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">одежда</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Верхняя одежда</a>
+                    <a href="#" class="main_text">Трикотаж</a>
+                    <a href="#" class="main_text">Пиджаки</a>
+                    <a href="#" class="main_text">Футболки и топы</a>
+                    <a href="#" class="main_text">Рубашки</a>
+                    <a href="#" class="main_text">Брюки</a>
+                    <a href="#" class="main_text">Джинсы</a>
+                    <a href="#" class="main_text">Вся одежда</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">обувь</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Сникеры</a>
+                    <a href="#" class="main_text">Мокасины</a>
+                    <a href="#" class="main_text">Ботинки</a>
+                    <a href="#" class="main_text">Туфли на шнуровке</a>
+                    <a href="#" class="main_text">Вся обувь</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">сумки</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Дорожные</a>
+                    <a href="#" class="main_text">Рюкзаки</a>
+                    <a href="#" class="main_text">Портфели</a>
+                    <a href="#" class="main_text">Все сумки</a>
+                </div>
+            </div>
+            <div class="dropdown_menu__column">
+                <a href="#" class="main_text_title">аксессуары</a>
+                <div class="dropdown_menu_category">
+                    <a href="#" class="main_text">Головные уборы</a>
+                    <a href="#" class="main_text">Шарфы</a>
+                    <a href="#" class="main_text">Ремни</a>
+                    <a href="#" class="main_text">Все аксессуары</a>
+                </div>
+            </div>
+        </div>
+        <div class="dropdown_menu__row">
+            <a href="#" class="main_text_title">готовые образы</a>
+        </div>
+    </div>
+</div>
+
+<!-- Выпадающее меню Мужчины конец -->
 
 
 <!-- Шапка мобильной версии начало -->
