--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -89,7 +89,7 @@ html {
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 1001;
 
     @media screen and (max-width: 920px) {
         & {
@@ -102,9 +102,10 @@ html {
         justify-content: space-between;
         align-items: center;
         gap: 58px;
+        transition: 1s;
 
         a:hover {
-            font-weight: 500;
+            transform: scale(1.05)
         }
     }
     
@@ -119,6 +120,11 @@ html {
             justify-content: flex-end;
             align-items: center;
             gap: 5px;
+            transition: 1s;
+
+            a:hover {
+                transform: scale(1.05)
+            }
         }
     
         .location {
@@ -126,6 +132,12 @@ html {
             justify-content: flex-end;
             align-items: center;
             gap: 5px;
+            transition: 1s;
+            cursor: pointer;
+
+            a:hover {
+                transform: scale(1.05)
+            }
 
         }
     }
@@ -139,6 +151,11 @@ html {
     gap: 5px;
     flex-direction: row;
     flex-wrap: nowrap;
+    transition: 1s;
+
+    a:hover {
+        transform: scale(1.05)
+    }
 }
 
 
@@ -150,7 +167,7 @@ html {
     position: sticky;
     top: 45px;
     background-color: $main_color_light;
-    z-index: 1000;
+    z-index: 1001;
 
     @media screen and (max-width: 920px) {
         & {
@@ -174,13 +191,25 @@ html {
         align-items: center;
         gap: 39px;
 
+        .nav_menu__women {
+            cursor: pointer;
+        }
+
         .nav_menu__women:hover {
-            border-bottom: 1px solid $addit_color_first;
+            border-bottom: 1.5px solid $main_color_dark;
+        }
+
+        .nav_menu__men {
+            cursor: pointer;
         }
 
         .nav_menu__men:hover {
-            border-bottom: 1px solid $addit_color_first;
+            border-bottom: 1.5px solid $main_color_dark;
         }
+    }
+
+    .nav_menu--active {
+        border-bottom: 1.5px solid $main_color_dark;
     }
 }
 
@@ -248,7 +277,7 @@ html {
     position: sticky;
     top: 0;
     background-color: $main_color_light;
-    z-index: 1000;
+    z-index: 1001;
 
     @media screen and (max-width: 920px) {
         display: flex;
@@ -1014,7 +1043,7 @@ html {
                 }
 
                 .post_desc {
-                    height: 77px;
+                    // height: 77px;
                     margin-bottom: 36px;
                     display: -webkit-box;
                     -webkit-line-clamp: 4;
@@ -1023,7 +1052,7 @@ html {
 
                     @media screen and (max-width: 767px) {
                         -webkit-line-clamp: 5;
-                        height: 91px;
+                        // height: 91px;
                         margin-bottom: 20px;
                         font-size: 12px;
                     }
@@ -1245,9 +1274,9 @@ html {
     align-items: center;
 
     a::after {
-        content: ' /';
+        content: '|';
         margin-left: 5px;
-        margin-right: 7px;
+        margin-right: 5px;
     }
 
     :last-child::after {
@@ -1260,6 +1289,34 @@ html {
 
     @media screen and (max-width: 767px) {
         height: 50px;
+
+        .main_text {
+            font-size: 12px;
+        }
+
+        a::after {
+            content: ' |';
+            margin-left: 3px;
+            margin-right: 3px;
+        }
+    }
+}
+
+@keyframes dropdown_slide_show {
+    0% {
+        top: -475px;
+    }
+    100% {
+        top: 130px;
+    }
+}
+
+@keyframes dropdown_slide_show_reverse {
+    0% {
+        top: 130px;
+    }
+    100% {
+        top: -475px;
     }
 }
 
@@ -1268,7 +1325,13 @@ html {
     width: 100%;
     background-color: $main_color_light;
     padding-bottom: 85px;
-    position: absolute;
+    position: fixed;
+    top: -475px;
+    z-index: 1000;
+
+    @media screen and (max-width: 920px) {
+        display: none;
+    }
 
     .container_menu {
         display: flex;
@@ -1294,36 +1357,70 @@ html {
                     justify-content: space-between;
                     align-items: flex-start;
                     row-gap: 8px;
+
+                    a {
+                        border-bottom: 1.5px solid $main_color_light;
+
+                        &:hover {
+                            border-bottom: 1.5px solid $main_color_dark;
+                        }
+                    }
                 }
             }
         }
     }
 }
 
+.dropdown--active {
+    animation: dropdown_slide_show 1s forwards;
+}
+
+.dropdown--inactive {
+    animation: dropdown_slide_show_reverse 1s forwards;
+}
+
 .dark_window {
     display: flex;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba($addit_color_dark, .7);
-    position: fixed;
+    position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+    z-index: 9980;
+}
+
+.dark_window_add_to_basket {
+    display: none;
+    width: 100vw;
+    min-height: 100vh;
+    background-color: rgba($addit_color_dark, .7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9980;
+}
+
+.dark_window_location {
+    display: none;
+    width: 100vw;
+    min-height: 100vh;
+    background-color: rgba($addit_color_dark, .7);
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 9980;
 }
 
 .dark_window_subscribe {
     display: none;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba($addit_color_dark, .7);
-    position: fixed;
+    position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
-    z-index: 998;
+    z-index: 9980;
 }
 
 .pop-up_title {
@@ -1334,6 +1431,7 @@ html {
     position: absolute;
     top: -20px;
     right: -20px;
+    cursor: pointer;
 }
 
 .pop-up_form_500 {
@@ -1479,23 +1577,27 @@ html {
     row-gap: 20px;
     transition: 0.3s;
 
+
     @media screen and (max-width: 767px) {
         max-width: 100%;
         margin-left: 0;
     }
 
-    &:hover {
-        .refund_condition__hidden {
-            display: flex;
-            animation: dropdown_show 1s;
-        }
+
+    .refund_condition--active {
+        animation: dropdown_show 1s;
     }
+
+    .refund_opened_arrow {
+        display: none;
+    }
+
 
     .refund_condition__visible {
         display: flex;
         align-items: center;
         justify-content: space-between;
-
+        cursor: pointer;
     }
 
     .refund_condition__hidden {
@@ -1623,49 +1725,58 @@ html {
     justify-content: space-between;
     align-items: center;
 
-    &:first-child:hover {
-        a:nth-child(n+2) {
-            color: $addit_color_dark;
-        }
+    a {
+        flex-grow: 1;
     }
 }
 
 .sorting {
-    width: 200px;
+    width: 225px;
     height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    column-gap: 10px;
     position: relative;
     flex-shrink: 0;
 
-    &:hover {
-        .sorting_dropdown {
-            display: flex;
-            opacity: 1;
-            animation: dropdown_show 1s;
+    .sort_title {
+        display: flex;
+        align-items: center;
+
+        .sorting_property {
+            cursor: pointer;
+            padding-right: 10px;
         }
+
+        .selected_sort{
+            cursor: pointer;
+        }
+
+        .sorting_icon {
+            display: flex;
+            cursor: pointer;
+        }
+
     }
 
     @media screen and (max-width: 920px) {
-        .main_text {
-            display: none;
-        }
-
-        .sorting_arrow {
+        .sorting_property {
             display: none;
         }
     }
 
+
+    .sorting_dropdown_show {
+        animation: dropdown_show 0.3s;
+    }
 
     .sorting_dropdown {
         position: absolute;
         right: 0;
         top: 60px;
-        z-index: 1000;
-        opacity: 1;
-    
+        z-index: 999;
+        // opacity: 1;
+
         display: none;
         flex-direction: column;
         width: 237px;
@@ -1682,7 +1793,7 @@ html {
             background-color: $main_color_light;
             display: flex;
             align-items: center;
-    
+            cursor: pointer;
     
             &:hover {
                 background-color: #f1f1f1;
@@ -1690,14 +1801,7 @@ html {
         }
     }
     
-    .sorting_icon {
-        display: none;
-        cursor: pointer;
-        
-        @media screen and (max-width: 920px) {
-            display: flex;
-        }
-    }
+
 
 }
 
@@ -1722,7 +1826,7 @@ html {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    column-gap: 10px;
+    // column-gap: 10px;
 
     @media screen and (max-width: 920px) {
         width: 229px;
@@ -1731,7 +1835,28 @@ html {
     @media screen and (max-width: 767px) {
         display: none;
     }
+
+    .hide_filters {
+        display: flex;
+        cursor: pointer;
+
+        .main_text_title {
+            padding-right: 10px;
+        }
+    }
+
+    .show_filters {
+        display: none;
+        cursor: pointer;
+
+        .main_text_title {
+            padding-right: 10px;
+        }
+    }
+
 }
+
+
 
 .right_panel {
     width: 100%;
@@ -1757,6 +1882,12 @@ html {
         .active_filters__item {
             display: flex;
             justify-content: flex-start;
+            align-items: center;
+        }
+
+        .delete_filter_item {
+            cursor: pointer;
+            display: flex;
             align-items: center;
         }
     }
@@ -1809,6 +1940,15 @@ html {
             padding-left: 20px;
             padding-bottom: 25px;
         }
+
+        .filter_arrow_closed {
+            display: none;
+            cursor: pointer;
+        }
+
+        .filter_arrow_opened {
+            cursor: pointer;
+        }
     }
 
     .btn_main {
@@ -1816,6 +1956,7 @@ html {
         height: 50px;
         width: 100%;
     }
+
 }
 
 .сustom_сheckbox + label {
@@ -1897,6 +2038,7 @@ html {
     justify-content: center;
     align-items: center;
     transition: .7s;
+    cursor: pointer;
 
     @media screen and (max-width: 767px) {
         height: 50px;
@@ -3163,13 +3305,28 @@ html {
                     border-bottom: none;
                 }
 
+                .option--active {
+                    display: flex;
+                }
+
+                .option--inactive {
+                    display: none;
+                }
+
+                .option_choosed {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    column-gap: 10px;
+                }
+
                 .info_row {
                     align-items: center;
                     min-height: 70px;
+                    cursor: pointer;
                 }
 
                 .color_details {
-                    display: flex;
                     justify-content: flex-start;
                     padding-left: 10px;
                     column-gap: 10px;
@@ -3179,11 +3336,11 @@ html {
                     .color_picker {
                         width: 40px;
                         height: 50px;
+                        cursor: pointer;
                     }
                 }
 
                 .size_row {
-                    display: flex;
                     justify-content: space-between;
                     min-height: 70px;
                     position: relative;
@@ -3201,11 +3358,7 @@ html {
                         align-items: center;
                         justify-content: flex-end;
                         text-align: end;
-
-                        &:hover + .size_chart__table {
-                            display: flex;
-                            animation: dropdown_show 1s;
-                        }
+                        cursor: pointer;
                     }
 
                     .size_chart__table {
@@ -3219,6 +3372,7 @@ html {
                         background: $main_color_light;
                         transition: 0.5s;
                         z-index: 999;
+                        animation: dropdown_show 0.3s;
     
                         .table_row {
                             display: flex;
@@ -3235,10 +3389,14 @@ html {
                             align-items: flex-start;
                         }
                     }
+
+                    .size_chart--active {
+                        display: flex;
+                    }
                 }
 
                 .option_details {
-                    display: flex;
+                    // display: flex;
                     flex-direction: column;
                     padding-left: 10px;
                     padding-bottom: 10px;
@@ -3254,9 +3412,13 @@ html {
     }
 }
 
-.size_choice:hover {
-    color: $main_color_dark;
-    font-weight: 700;
+.size_choice {
+    cursor: pointer;
+
+    &:hover {
+        color: $main_color_dark;
+        transform: scale(1.002);
+    }
 }
 
 .btn_main--margin {
