--- a/templates/layouts/main.layout.html
+++ b/templates/layouts/main.layout.html
@@ -9,6 +9,8 @@
 <body>
     {% include "partials/header.html" %}
 
+    {% include "partials/subscribe_modal.html" %}
+
 
     {% include "partials/breadcrumbs.html" %}
 
@@ -24,5 +26,7 @@
 
    
     {% block scripts %}{% endblock %}
+
+    <script src="main.js"></script>
 </body>
 </html>
