--- a/templates/pages/product_page.html
+++ b/templates/pages/product_page.html
@@ -15,12 +15,8 @@
             text: 'Женщины'
         },
         {
-            link: 'catalog_closed_filters.html',
+            link: 'catalog_opened_filters+checkbox+active.html',
             text: 'Одежда'
-        },
-        {
-            link: 'product_page.html',
-            text: 'Карточка товара'
         }
     ]
 %}
@@ -85,47 +81,62 @@
 
             <div class="option">
                 <div class="info_row">
-                    <p class="main_text uppercase">цвет</p>
-                    <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
+                    <div class="option_choosed">
+                        <p class="main_text uppercase">цвет</p>
+                        <div class="color_choosed_img"></div>
+                        <div class="color_choosed_name"></div>
+                    </div>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow color_opened_arrow">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow color_closed_arrow option--inactive">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
                 </div>
-                <div class="color_details">
-                    <a href="product_page+color_selected.html">
-                        <img src="./img/product_cards/women/clothes/product3/grey.png"  class="color_picker" alt="#">
-                    </a>
-                    <div class="small_text">Серый</div>
-                    <a href="#">
-                        <img src="./img/product_cards/women/clothes/product3/beige.png"  class="color_picker" alt="#">
-                    </a>
-                    <div class="small_text">Бежевый</div>
+                <div class="option_item color_details option--active">
+
+                    <img src="./img/product_cards/women/clothes/product3/grey.png"  class="color_picker" alt="#">
+                    <div class="small_text color_name">Серый</div>
+
+                    <img src="./img/product_cards/women/clothes/product3/beige.png"  class="color_picker" alt="#">
+                    <div class="small_text color_name">Бежевый</div>
+                    
                 </div>
             </div>
 
             <div class="option">
                 <div class="info_row">
-                    <p class="main_text uppercase">размер</p>
-                    <a href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
-                </div>
-                <div class="size_row">
-
-                    <div class="size_details">
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXS</a>
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">XS</a>
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">S</a>
-                        <a href="product_page+size_selected.html" class="main_text_addit_dark uppercase size_choice">M</a>
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">L</a>
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">XL</a>
-                        <a href="#" class="main_text_addit_dark uppercase size_choice">XXL</a>
+                    <div class="option_choosed">
+                        <p class="main_text uppercase">размер</p>
+                        <div class="size_choosed"></div>
                     </div>
 
-                    <a href="#" class="small_text underline size_chart">Таблица размеров</a>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow size_opened_arrow">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow size_closed_arrow option--inactive">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
+                </div>
+                <div class="option_item size_row option--active">
+
+                    <div class="size_details">
+                        <div class="main_text_addit_dark uppercase size_choice">XXS</div>
+                        <div class="main_text_addit_dark uppercase size_choice">XS</div>
+                        <div class="main_text_addit_dark uppercase size_choice">S</div>
+                        <div class="main_text_addit_dark uppercase size_choice">M</div>
+                        <div class="main_text_addit_dark uppercase size_choice">L</div>
+                        <div class="main_text_addit_dark uppercase size_choice">XL</div>
+                        <div class="main_text_addit_dark uppercase size_choice">XXL</div>
+                    </div>
+
+                    <div class="small_text underline size_chart">Таблица размеров</div>
 
                     <!-- Таблица размеров одежды начало -->
 
@@ -254,17 +265,20 @@
             <div class="option">
                 <div class="info_row">
                     <p class="main_text uppercase">описание</p>
-                    <a href="product_page+opened_details.html" class="show_details">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow option--inactive">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
                 </div>
-                <!-- <div class="option_details">
+                <div class="option_item option_details option--inactive">
                     <p class="small_text">
                         Уютный силуэт характеризует джемпер из кашемира с воротником-воронкой, связанный узором «английская резинка». Пушистая пряжа подчеркивает мягкие и свободные формы изделия с рукавами реглан. Наконец, тонкая вышивка из блестящей цепочки Мониль образует нежную сверкающую полосу на задней части воротника.
                     </p>
-                </div> -->
+                </div>
             </div>
 
 
@@ -272,66 +286,69 @@
             <div class="option">
                 <div class="info_row">
                     <p class="main_text uppercase">детали</p>
-                    <a href="product_page+opened_details.html" class="show_details">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow option--inactive">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </div>
-                <!-- <div class="option_details">
+                <div class="option_item option_details option--inactive">
                     <p class="small_text">Воротник-воронка</p>
                     <p class="small_text">Рукав-реглан</p>
                     <p class="small_text">Английская резинка</p>
                     <p class="small_text">Украшение Мониль без содержания никеля</p>  
-                </div> -->
+                </div>
             </div>
 
             <div class="option">
                 <div class="info_row">
                     <p class="main_text uppercase">материалы</p>
-                    <a href="product_page+opened_details.html" class="show_details">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow option--inactive">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </div>
-                <!-- <div class="option_details">
+                <div class="option_item option_details option--inactive">
                     <p class="small_text">
                         100% кашемир
                     </p>
-                </div> -->
+                </div>
             </div>
 
             <div class="option">
                 <div class="info_row">
                     <p class="main_text uppercase">доставка и возврат</p>
-                    <a href="product_page+opened_details.html" class="show_details">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow option--inactive">
+                        <path d="M14.1673 11.667L10.0007 7.50033L5.83398 11.667" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_closed_arrow">
+                        <path d="M5.83366 8.33301L10.0003 12.4997L14.167 8.33301" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 </div>
-                <!-- <div class="option_details">
+                <div class="option_item option_details option--inactive">
                     <div class="small_text">
                         Доставка всех наших изделий всегда бесплатна. Экспресс-доставка по всему миру осуществляется с понедельника по пятницу, обычно в течение 5 рабочих дней. Для получения более подробной информации о сроках доставки и условиях возврата ознакомьтесь со страницах
                          <a href="delivery.html" class="small_text underline">Доставка</a>
                           и 
                         <a href="refund.html" class="small_text underline">Возврат.</a>
                     </div>
-                </div> -->
+                </div>
             </div>
  
 
         </div>
 
-        <a href="#" class="btn_main">
+        <div class="btn_main add_to_basket_btn">
             <p class="main_text uppercase btn_text">
                 добавить в корзину
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
                     <path d="M11.6667 5.21684V3.67014C11.6667 3.18817 11.5661 2.71092 11.3706 2.26564C11.1752 1.82036 10.8888 1.41576 10.5276 1.07496C10.1665 0.734155 9.73781 0.463814 9.26599 0.279373C8.79417 0.0949308 8.28847 0 7.77778 0C7.26708 0 6.76139 0.0949308 6.28956 0.279373C5.81774 0.463814 5.38903 0.734155 5.02792 1.07496C4.6668 1.41576 4.38035 1.82036 4.18491 2.26564C3.98948 2.71092 3.88889 3.18817 3.88889 3.67014V7.34028C3.88889 7.47933 3.94742 7.61269 4.05161 7.71102C4.15579 7.80934 4.2971 7.86458 4.44444 7.86458C4.59179 7.86458 4.73309 7.80934 4.83728 7.71102C4.94147 7.61269 5 7.47933 5 7.34028V6.26545H9.44444V5.21684H5V3.67014C5 2.97487 5.29266 2.30807 5.81359 1.81644C6.33453 1.32481 7.04106 1.04861 7.77778 1.04861C8.51449 1.04861 9.22103 1.32481 9.74196 1.81644C10.2629 2.30807 10.5556 2.97487 10.5556 3.67014V7.31406C10.5556 7.45312 10.6141 7.58648 10.7183 7.6848C10.8225 7.78313 10.9638 7.83837 11.1111 7.83837C11.2585 7.83837 11.3998 7.78313 11.5039 7.6848C11.6081 7.58648 11.6667 7.45312 11.6667 7.31406V6.26545H14.4444V15.703H1.11111V6.26545H2.77778V5.21684H0V15.7501C0 16.0157 0.111795 16.2704 0.310792 16.4583C0.509789 16.6461 0.779687 16.7516 1.06111 16.7516H14.4944C14.7759 16.7516 15.0458 16.6461 15.2448 16.4583C15.4438 16.2704 15.5556 16.0157 15.5556 15.7501V5.21684H11.6667Z" class="color_icon" fill="#393939"/>
                 </svg>
             </p>
-        </a>
+        </div>
 
     </div>
 </div>
@@ -343,6 +360,32 @@
 {% include "partials/subscribe.html" %}
 
 <!-- Страница товара конец -->
+
+<!-- Окно добавления в корзину начало -->
+
+<div class="dark_window_add_to_basket">
+    <div class="pop-up_form_500 add_to_basket">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="close_icon">
+            <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
+        </svg>
+        <p class="main_text_contrast uppercase pop-up_title">товар добавлен в корзину</p>
+        <a href="basket_full.html" class="btn_main btn_main--margin">
+            <p class="main_text uppercase btn_text">
+                перейти в корзину
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+                    <path d="M11.6667 5.21684V3.67014C11.6667 3.18817 11.5661 2.71092 11.3706 2.26564C11.1752 1.82036 10.8888 1.41576 10.5276 1.07496C10.1665 0.734155 9.73781 0.463814 9.26599 0.279373C8.79417 0.0949308 8.28847 0 7.77778 0C7.26708 0 6.76139 0.0949308 6.28956 0.279373C5.81774 0.463814 5.38903 0.734155 5.02792 1.07496C4.6668 1.41576 4.38035 1.82036 4.18491 2.26564C3.98948 2.71092 3.88889 3.18817 3.88889 3.67014V7.34028C3.88889 7.47933 3.94742 7.61269 4.05161 7.71102C4.15579 7.80934 4.2971 7.86458 4.44444 7.86458C4.59179 7.86458 4.73309 7.80934 4.83728 7.71102C4.94147 7.61269 5 7.47933 5 7.34028V6.26545H9.44444V5.21684H5V3.67014C5 2.97487 5.29266 2.30807 5.81359 1.81644C6.33453 1.32481 7.04106 1.04861 7.77778 1.04861C8.51449 1.04861 9.22103 1.32481 9.74196 1.81644C10.2629 2.30807 10.5556 2.97487 10.5556 3.67014V7.31406C10.5556 7.45312 10.6141 7.58648 10.7183 7.6848C10.8225 7.78313 10.9638 7.83837 11.1111 7.83837C11.2585 7.83837 11.3998 7.78313 11.5039 7.6848C11.6081 7.58648 11.6667 7.45312 11.6667 7.31406V6.26545H14.4444V15.703H1.11111V6.26545H2.77778V5.21684H0V15.7501C0 16.0157 0.111795 16.2704 0.310792 16.4583C0.509789 16.6461 0.779687 16.7516 1.06111 16.7516H14.4944C14.7759 16.7516 15.0458 16.6461 15.2448 16.4583C15.4438 16.2704 15.5556 16.0157 15.5556 15.7501V5.21684H11.6667Z" class="color_icon" fill="#393939"/>
+                </svg>
+            </p>
+        </a>
+        <div class="btn_main turn_to_shop">
+            <p class="main_text uppercase btn_text">
+                вернуться к покупкам
+            </p>
+        </div>
+    </div>
+</div>
+
+<!-- Окно добавления в корзину конец -->
 
 {% endblock %}
 
