--- a/templates/partials/catalog_opened_filters_panel+active.html
+++ b/templates/partials/catalog_opened_filters_panel+active.html
@@ -1,13 +1,21 @@
 <div class="container panel_height">
     <div class="hide_filtres">
-        <a href="catalog_closed_filters+active.html" class="main_text_title">
-            скрыть фильтры
-        </a>
-        <a href="catalog_closed_filters+active.html">
+        <div class="hide_filters">
+            <div class="main_text_title">
+                скрыть фильтры
+            </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-            <path d="M11.6665 5.83366L7.49984 10.0003L11.6665 14.167" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M11.6665 5.83366L7.49984 10.0003L11.6665 14.167" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-        </a>
+        </div>
+        <div class="show_filters">
+            <div class="main_text_title">
+                фильтры
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M8.3335 14.1673L12.5002 10.0007L8.3335 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </div>
     </div>
     
     <a href="catalog_closed_filters.html">
@@ -21,42 +29,9 @@
     
     <div class="right_panel">
         <div class="active_filters">
-            <div class="active_filters__item">
-                <p class="small_text uppercase">трикотаж</p>
-                <a href="catalog_closed_filters.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
-                    </svg>
-                </a>
-            </div>
-            <div class="active_filters__item">
-                <p class="small_text uppercase">серый</p>
-                <a href="catalog_closed_filters.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
-                    </svg>
-                </a>
-            </div>
-            <div class="active_filters__item">
-                <p class="small_text uppercase">размер&nbsps</p>
-                <a href="catalog_closed_filters.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
-                    </svg>
-                </a>
-            </div>
-            <div class="active_filters__item">
-                <p class="small_text uppercase">кашемир</p>
-                <a href="catalog_closed_filters.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                    <path d="M5.33316 15.2565L4.74316 14.6665L9.40983 9.99983L4.74316 5.33316L5.33316 4.74316L9.99983 9.40983L14.6665 4.74316L15.2565 5.33316L10.5898 9.99983L15.2565 14.6665L14.6665 15.2565L9.99983 10.5898L5.33316 15.2565Z" fill="#393939"/>
-                    </svg>
-                </a>
-            </div>
+            <!-- сюда добавятся выбранные фильтры -->
         </div>
-
-        {% include "partials/sorting.html" %}
     </div>
-
-
+    
+    {% include "partials/sorting.html" %}
 </div>
